fix diagram for goods

--- a/templates/price/trade_list.html
+++ b/templates/price/trade_list.html
@@ -1,5 +1,10 @@
 {% extends "base.html" %}
 
+{% block head %}
+<script language="javascript" type="text/javascript" src="/media/js/jquery.js"></script>
+<script language="javascript" type="text/javascript" src="/media/js/jquery.flot.pack.js"></script>
+{% endblock %}
+
 {% block breadcrumbs %}
 
 {% if is_profile %}
