--- a/templates/price/trade_list.html
+++ b/templates/price/trade_list.html
@@ -29,6 +29,99 @@
     <br><a href="{% url user_month month1.year month1|date:'m' %}">{{ month1.year }}.{{ month1|date:'m' }}</a>
 {% endfor %}
 {% endif %}
+
+{% if goods1 %}
+{% load shop_extras %}
+<p id="shop_choices">Магазины:</p>
+<script type="text/javascript">
+$(document).ready(function() {
+    var datasets = {
+        {% for shop in shop_list %}
+        "{{ shop.title }}": {
+            label: "{{ shop.title }}",
+            data: [{% for trade in object_list %}{% ifequal trade.shop shop %}[{{ trade.time|epoch }},{{ trade.price }}],{% endifequal %}{% endfor %}]
+        },
+        {% endfor %}
+    };
+    // hard-code color indices to prevent them from shifting as shop are turned on/off
+    var i = 0;
+    $.each(datasets, function(key, val) {
+        val.color = i;
+        ++i;
+    });
+    // insert checkboxes
+    var choiceContainer = $("#shop_choices");
+    $.each(datasets, function(key, val) {
+        choiceContainer.append('<br/><input type="checkbox" name="' + key +
+                               '" checked="checked" >' + val.label + '</input>');
+    });
+    choiceContainer.find("input").click(plotAccordingToChoices);
+    
+    function plotAccordingToChoices() {
+        var data = [];
+
+        choiceContainer.find("input:checked").each(function () {
+            var key = $(this).attr("name");
+            if (key && datasets[key])
+                data.push(datasets[key]);
+        });
+
+        if (data.length > 0)
+            $.plot($("#price_chart"), data, {
+                lines: { show: true },
+                points: { show: true },
+                yaxis: {
+                    tickDecimals: 2},
+                xaxis: {
+                    minTickSize: [1, "day"],
+                    mode: "time",
+                    timeformat: "%y/%m/%d"},
+                grid: { hoverable: true, clickable: true },
+            });
+    }
+
+    plotAccordingToChoices();
+    
+    function showTooltip(x, y, contents) {
+        $('<div id="tooltip">' + contents + '</div>').css( {
+            position: 'absolute',
+            display: 'none',
+            top: y + 5,
+            left: x + 5,
+            border: '1px solid #fdd',
+            padding: '2px',
+            'background-color': '#fee',
+            opacity: 0.80
+        }).appendTo("body").fadeIn(200);
+    };
+    
+    var previousPoint = null;
+    $("#price_chart").bind("plothover", function (event, pos, item) {
+        if (item) {
+            if (previousPoint != item.datapoint) {
+                previousPoint = item.datapoint;
+                
+                $("#tooltip").remove();
+                var x = new Date(item.datapoint[0]);
+                var y = item.datapoint[1].toFixed(2);
+                var xmonth = x.getMonth() + 1 +"";
+                if (xmonth.length == 1) {
+                    xmonth = "0" + xmonth;
+                }
+                showTooltip(item.pageX, item.pageY - 25,
+                            item.series.label + ": " + x.getDate() + '/' + xmonth + '/' + x.getFullYear() +
+                            " (" + x.getHours() + ":" + x.getMinutes() + ") = " + y);
+            }
+        }
+        else {
+            $("#tooltip").remove();
+            previousPoint = null;            
+        }
+    });
+});
+</script>
+{% endif %}
+
 {% endblock %}
 
 
@@ -63,28 +156,6 @@ $(document).ready(function() {
 
 {% if goods1 %}
 {% load shop_extras %}
-<script type="text/javascript">
-$(function () {
-//    var d1 = [[1,25],[2,26]];
-
-    var i = 1;
-    var d1 = [
-    {% for trade in object_list %}
-    [{{ trade.time|epoch }},{{ trade.price }}],
-    {% endfor %}
-    ];
-    $.plot($("#price_chart"), [d1,], {
-        lines: { show: true },
-        points: { show: true },
-        yaxis: {
-            tickDecimals: 2},
-        xaxis: {
-            minTickSize: [1, "day"],
-            mode: "time",
-            timeformat: "%y/%m/%d"},
-    });
-});
-</script>
 <div id="price_chart" style="width:100%;height:300px;"></div>
 {% endif %}
 
