--- a/templates/registration/logout.html
+++ b/templates/registration/logout.html
@@ -1,5 +1,5 @@
-{% extends "base.html"  %}
+{% extends "base.html" %}
 {% block content %}
 <h1>Выход</h1>
-Спасибо, что были с нами. Ждем вас снова.<br/><br/>
+Спасибо, что были с нами. Ждем вас <a href="{% url auth_login %}">снова</a>.<br/><br/>
 {% endblock %} 
