--- a/templates/registration/registration_form.html
+++ b/templates/registration/registration_form.html
@@ -1,10 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %}
-Регистрация
-{% endblock %}
 {% block content %}
+<h1>Регистрация</h1>
 <form method="post" action="">
+{% csrf_token %}
 <dl class="register">
 {% for field in form %}
     <dt>{{ field.label_tag }}</dt>
