--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,9 @@
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 
+<link rel="shortcut icon" href="/media/design/favicon.ico" type="image/x-icon" /> 
+<link rel="icon" href="/media/design/favicon.ico" type="image/x-icon" /> 
+
 <meta name="robots" content="noindex,nofollow" />
 
 <script type="text/javascript" src="/media/js/jquery.min.js"></script>
